2016-06-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line) <@end, @include>
	<@documentencoding, @documentlanguage>: Do not call 
	Texinfo::Convert::Text::convert to get the argument to the 
	command.  Instead, call _trim_spaces_comment_from_content to 
	find the element containing the text for the command.  Give an 
	error message if there are excessive elements in the argument 
	(e.g. @-commands).

	This has the consequence that @@ can no longer be used to
	refer to an @-sign in an @include command (similarly for "@ " 
	for " ", and some other @-commands).

2016-06-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@setfilename): Fix typo.

2016-06-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/TextContent.pm: Remove commented-out and 
	disabled code.

2016-06-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-text-test.texi (@set and @value): Add a chapter 
	for tests of @set and @value.  Add a test of a value in an index 
	entry which is only defined after the index entry.

2016-06-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Remove line referring to "parsetexi" 
	subdirectory.

2016-06-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (nodes_tree): Refer to
	Texinfo::Common::parse_node_manual instead of
	Texinfo::Parser::_parse_node_manual.
	* tp/t/test_utils.pl (cmp_trimmed): Put module name "Test::Deep"
	in front of function "cmp_deeply" which comes from it.

2016-06-07  Gavin Smith  <gavinsmith0123@gmail.com>
	
	* doc/texinfo.tex (\dopdfoutline): For display string for PDF 
	bookmark, check if encoding is Latin-1, and if so, call 
	\passthroughcharstrue.

2016-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\pdfmkdest): Call \passthroughcharsfalse in 
	order to use ASCII approximations in destination names.

2016-06-07  Gavin Smith  <gavinsmith0123@gmail.com>
